# hypermodern-python-example

./: .coverage  .flake8  .pre-commit-config.yaml  .readthedocs.yml  README.md  noxfile.py  pyproject.toml  test
.github/: release-drafter.yml
.github/workflows/: coverage.yml  release-drafter.yml  release.yml  tests.yml
docs/: conf.py  index.rst  license.rst  reference.rst  requirements.txt
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
docs/_build/_sources/: reference.rst.txt
src/hypermodern_python_example/: console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
