[tool.poetry]
name = "hypermodern-python-example"
version = "0.1.0"
description = "The hypermodern Python example"
authors = ["Paul <paulrousset@hotmail.fr>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/username/hypermodern-python-example"
repository = "https://github.com/username/hypermodern-python-example"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python-example = "hypermodern_python_example.console:main"
